--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,179 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+*.class
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# log
+log/
+logs/
+stats/
+.stats/
 
-# testing
-/coverage
+# Build results
+[Tt]arget/
+[Bb]uild/
+[Oo]utput/
+[Dd]ist/
 
-# production
-/build
 
-# misc
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+
+*.war
+*.ear
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+# maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+
+# mac
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.DS_Store?
+.AppleDouble
+.LSOverride
+._*
+.Spotlight-V100
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# windows
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# node
+node_modules/
+dist/
+dist-test/
+build/
+
+# typings
+typings/
+
+# gradle
+.gradletasknamecache
+.gradle/
+build/
+bin/
+
+
+# IntelliJ IDEA
+.idea/
+.idea_modules/
+*.iml
+*.idea
+*.ipr
+*.iws
+.classpath
+.project
+.settings
+classes
+out/
+
+*.lock
+*.log
+
+# VS
+obj/
+# .vscode/
+
+backup/
+backup-test/
+uploads
+uploads/
+uploads-test
+uploads-test/
+upload-dir
+upload-dir/
+
+coverage
+coverage/
+
+.nyc_output/
+
+undefinedtmp/
+
+
+# office
+*.tmp
+
+# Word temporary
+~$*.doc*
+
+# Word Auto Backup File
+Backup of *.doc*
+
+# Excel temporary
+~$*.xls*
+
+# Excel Backup File
+*.xlk
+
+# PowerPoint temporary
+~$*.ppt*
+
+# Visio autosave temporary files
+*.~vsd*
+*.~vsd*
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.pnp.*
+backend/uploads
+backend/files
+cron-booking/files
+docker-deploy/data/*
+docker-deploy/docker-compose/data
+
+### Swift ###
+xcuserdata/
+*.xcscmblueprint
+*.xccheckout
+build/
+DerivedData/
+*.moved-aside
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+
+## Obj-C/Swift specific
+*.hmap
+
+## App packaging
+*.ipa
+*.dSYM.zip
+*.dSYM
+
+## Playgrounds
+timeline.xctimeline
+playground.xcworkspace
+.build/
+Carthage/Build/
+
+# Accio dependency management
+Dependencies/
+.accio/
+fastlane/report.xml
+fastlane/Preview.html
+fastlane/screenshots/**/*.png
+fastlane/test_output
+iOSInjectionProject/
+Pods/
